--- a/portfolio.html
+++ b/portfolio.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- heder -->
     <header class="header">
       <div class="container main-header">
         <nav class="header-nav">
@@ -63,11 +64,13 @@
       </div>
     </header>
 
+    <!-- main -->
     <main>
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Фільтер по сторінці</h1>
 
+          <!-- Навігація фільтра -->
           <ul class="navigation-list list">
             <li class="navigation-item">
               <button type="button" class="navigation-button">Все</button>
@@ -88,15 +91,24 @@
             </li>
           </ul>
 
+          <!-- Фільтер -->
           <ul class="filter-list list">
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-1.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-1.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Технокряк</h2>
                   <p class="filter-text">Веб-сайт</p>
@@ -105,12 +117,20 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-2.jpg"
-                  alt="Дизайн"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-2.jpg"
+                    alt="Дизайн"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>
+                    Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Постер New Orlean vs Golden Star</h2>
                   <p class="filter-text">Дизайн</p>
@@ -119,12 +139,18 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-3.jpg"
-                  alt="Приложение"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-3.jpg"
+                    alt="Приложение"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Ресторан Seafood</h2>
                   <p class="filter-text">Приложение</p>
@@ -133,12 +159,18 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-4.jpg"
-                  alt="Маркетинг"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-4.jpg"
+                    alt="Маркетинг"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Проект Prime</h2>
                   <p class="filter-text">Маркетинг</p>
@@ -147,12 +179,18 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-5.jpg"
-                  alt="Приложение"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-5.jpg"
+                    alt="Приложение"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Проект Boxes</h2>
                   <p class="filter-text">Приложение</p>
@@ -161,12 +199,18 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-6.jpg"
-                  alt="Приложение"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-6.jpg"
+                    alt="Приложение"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Inspiration has no Borders</h2>
                   <p class="filter-text">Веб-сайт</p>
@@ -175,12 +219,18 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-7.jpg"
-                  alt="Дизайн"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-7.jpg"
+                    alt="Дизайн"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Издание Limited Edition</h2>
                   <p class="filter-text">Дизайн</p>
@@ -189,12 +239,18 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-8.jpg"
-                  alt="Маркетинг"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-8.jpg"
+                    alt="Маркетинг"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Проект LAB</h2>
                   <p class="filter-text">Маркетинг</p>
@@ -203,12 +259,18 @@
             </li>
             <li class="filter-item">
               <a href="" class="filter-link link">
-                <img
-                  src="./images/k-9.jpg"
-                  alt="Приложение"
-                  width="370"
-                  class="filter-img"
-                />
+                <div class="filter-images">
+                  <img
+                    src="./images/k-9.jpg"
+                    alt="Приложение"
+                    width="370"
+                    class="filter-img"
+                  />
+                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+
                 <div class="filter-container">
                   <h2 class="filter-title">Growing Business</h2>
                   <p class="filter-text">Приложение</p>
@@ -220,6 +282,7 @@
       </section>
     </main>
 
+    <!-- footer -->
     <footer class="footer">
       <div class="container ftr-container">
         <div class="first-footer">
