--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-02</title>
+    <title>goit-markup-hw-05</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+
+    <!-- heder -->
     <header class="header">
       <div class="container main-header">
         <nav class="header-nav">
@@ -62,7 +64,8 @@
         </ul>
       </div>
     </header>
-
+    
+<!-- main -->
     <main>
       <!-- Блок героя -->
       <section class="hero">
@@ -140,17 +143,20 @@
       <!-- Чем мы занимаемся -->
       <section class="section work">
         <div class="container">
-          <h2 class="section-title works-title">Чем мы занимаемся</h2>
+          <h2 class="section-title title-work">Чем мы занимаемся</h2>
 
           <ul class="works-list list">
             <li class="works-item">
               <img src="./images/img(1).jpg" alt="фото" width="370" />
+              <h3 class="works-title">Десктопные приложения</h3>
             </li>
             <li class="works-item">
               <img src="./images/img(2).jpg" alt="фото" width="370" />
+              <h3 class="works-title">Мобильные приложения</h3>
             </li>
             <li class="works-item">
               <img src="./images/img(3).jpg" alt="фото" width="370" />
+              <h3 class="works-title">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
@@ -464,5 +470,9 @@
         </div>
       </div>
     </footer>
+
+    <!-- skript -->
+    <script src="./js/modal.js"></script>
+
   </body>
 </html>
