--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
               <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="nav-item">
-              <a href="" class="link current">Портфолио</a>
+              <a href="" class="nav-link link current">Портфолио</a>
             </li>
             <li class="nav-item">
               <a href="" class="link">Контакты</a>
@@ -102,7 +102,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>
+                  <p class="filter-images-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -124,7 +124,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>
+                  <p class="filter-images-text">
                     Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.
@@ -146,7 +146,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.</p>
                 </div>
@@ -166,7 +166,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.</p>
                 </div>
@@ -186,7 +186,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.</p>
                 </div>
@@ -206,7 +206,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.</p>
                 </div>
@@ -226,7 +226,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.</p>
                 </div>
@@ -246,7 +246,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.</p>
                 </div>
@@ -266,7 +266,7 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p>Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
                     исчерпывающие сведения о компании или частном лице.</p>
                 </div>
