--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-
     <!-- heder -->
     <header class="header">
       <div class="container main-header">
@@ -31,7 +30,7 @@
           >
           <ul class="nav-list list">
             <li class="nav-item">
-              <a href="" class="link current">Студия</a>
+              <a href="" class="nav-link link current">Студия</a>
             </li>
             <li class="nav-item">
               <a href="./portfolio.html" class="link">Портфолио</a>
@@ -64,8 +63,8 @@
         </ul>
       </div>
     </header>
-    
-<!-- main -->
+
+    <!-- main -->
     <main>
       <!-- Блок героя -->
       <section class="hero">
@@ -148,15 +147,21 @@
           <ul class="works-list list">
             <li class="works-item">
               <img src="./images/img(1).jpg" alt="фото" width="370" />
-              <h3 class="works-title">Десктопные приложения</h3>
+              <div class="works-container">
+                <h3 class="works-title">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="works-item">
               <img src="./images/img(2).jpg" alt="фото" width="370" />
-              <h3 class="works-title">Мобильные приложения</h3>
+              <div class="works-container">
+                <h3 class="works-title">Мобильные приложения</h3>
+              </div>
             </li>
             <li class="works-item">
               <img src="./images/img(3).jpg" alt="фото" width="370" />
-              <h3 class="works-title">Дизайнерские решения</h3>
+              <div class="works-container">
+                <h3 class="works-title">Дизайнерские решения</h3>
+              </div>
             </li>
           </ul>
         </div>
@@ -473,6 +478,5 @@
 
     <!-- skript -->
     <script src="./js/modal.js"></script>
-
   </body>
 </html>
