--- a/portfolio.html
+++ b/portfolio.html
@@ -146,9 +146,11 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
 
                 <div class="filter-container">
@@ -166,9 +168,11 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
 
                 <div class="filter-container">
@@ -186,9 +190,11 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
 
                 <div class="filter-container">
@@ -206,9 +212,11 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
 
                 <div class="filter-container">
@@ -226,9 +234,11 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
 
                 <div class="filter-container">
@@ -246,9 +256,11 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
 
                 <div class="filter-container">
@@ -266,9 +278,11 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">Ресурс предлагает комплексные предложения с разным уровнем
+                  <p class="filter-images-text">
+                    Ресурс предлагает комплексные предложения с разным уровнем
                     функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.</p>
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
                 </div>
 
                 <div class="filter-container">
