--- a/portfolio.html
+++ b/portfolio.html
@@ -102,11 +102,15 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -124,11 +128,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -146,11 +153,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -168,11 +178,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -190,11 +203,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -212,11 +228,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -234,11 +253,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -256,11 +278,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
@@ -278,11 +303,14 @@
                     width="370"
                     class="filter-img"
                   />
-                  <p class="filter-images-text">
-                    Ресурс предлагает комплексные предложения с разным уровнем
-                    функционала и сервисов. Все это позволит посетителю получить
-                    исчерпывающие сведения о компании или частном лице.
-                  </p>
+                  <div class="filter-overlay">
+                    <p class="filter-images-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем
+                      функционала и сервисов. Все это позволит посетителю
+                      получить исчерпывающие сведения о компании или частном
+                      лице.
+                    </p>
+                  </div>
                 </div>
 
                 <div class="filter-container">
