--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
     </footer>
 
     <!-- Модальне вікно -->
-    <div class="modal" data-modal>
+    <div class="modal is-hidden" data-modal>
       <div class="modal-window">
         <button class="modal-button" data-modal-close></button>
       </div>
