--- a/index.html
+++ b/index.html
@@ -444,6 +444,8 @@
 
         <div class="second-footer">
           <h2 class="title-icon">присоединяйтесь</h2>
+          <h2 class="title-icon">присоединяйтесь</h2>
+
           <ul class="footer-list-icon list">
             <li>
               <a href="" class="footer-link-icon link">
